--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 </head>
 <body>
-  <div id="image">a
+  <div id="image">aaa
   </div>
   <script>
     $("#image").prepend('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
