--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <head>
   <title> Kids Are Weird </title>
@@ -6,4 +6,7 @@
 <body>
   <div id="image">
   </div>
+
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script>$("#image").append('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"/>')</script>
 </body>
