--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-
+<html>
 <head>
   <title> Kids Are Weird </title>
 </head>
 <body>
   <div id="image">
   </div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script type="text/javascript">
+  $('#image').append('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" alt="Painting with dog">');
+</script>
 </body>
+</html>
