--- a/html/index.html
+++ b/html/index.html
@@ -6,4 +6,8 @@
 <body>
   <div id="image">
   </div>
+  <script  src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    $("#image").append("<img src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif' alt='dog gif'>")
+  </script>
 </body>
