--- a/html/index.html
+++ b/html/index.html
@@ -6,4 +6,11 @@
 <body>
   <div id="image">
   </div>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script>
+    $('#image').prepend('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" id="image">')
+  </script>
 </body>
