--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,13 @@
 
 <head>
   <title> Kids Are Weird </title>
-</head>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script></head>
 <body>
   <div id="image">
   </div>
 </body>
+<script type="text/javascript">
+  $('div#image').append(
+    "<img src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif' alt='Kid painting with dog's tail'>"
+  );
+</script>
